Data Model partialy completed - working on unit tests for entity relations vs. lazy loading fetch type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,22 @@
 # Default port on localhost
 server.port:8080
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
 # Datasource
 spring.datasource.url=jdbc:h2:mem:space_hub
 spring.datasource.username=areo
 spring.datasource.password=a
 spring.datasource.driver-class-name=org.h2.Driver
 DB_CLOSE_ON_EXIT=FALSE
+
 # Logging
 logging.level.root=WARN
-logging.level.com.it.ardesign.payback=DEBUG
+logging.level.com.eversis.spaceagencydatahub=DEBUG
+
+#SQL logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
