H2 console enabled for Spring Security. Refactoring on classes (cleaning + enhancements). Data preparator added for startup testing

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,8 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<!--below scope modified to "compile" intentionally-->
+			<!--<scope>runtime</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -64,6 +65,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.2</version>
 		</dependency>
 
 		<!-- Swagger API added to provide presentation layer via http://localhost:8080/swagger-ui.html#-->
